# sentype

./: .SRCINFO  .gitignore  LICENSE  MANIFEST.in  PKGBUILD  README.md  build-windows.ps1  donkeytype  game.py  install.sh  pyproject.toml  requirements-build.txt  sentences.txt  sentences_easy.txt  sentences_hard.txt  sentences_medium.txt  sentype  setup.cfg  words.txt
tests/: test_game.py
