[metadata]
name = donkeytype
version = 0.1.0
description = DonkeyType — simple terminal typing game
author = You
author_email = you@example.com
license = MIT
url = https://example.com/donkeytype

[options]
py_modules = game
install_requires =
python_requires = >=3.6
include_package_data = True

[options.entry_points]
console_scripts =
    donkeytype = game:main
